feat: list direct players with period commission income
